fixing pricing page button shifting issue and design bugs

--- a/src/main.css
+++ b/src/main.css
@@ -194,6 +194,19 @@ body {
     font-weight: bold;
 }
 
+.cursor-pointer{
+    cursor: pointer !important;
+}
+.visibility_hidden{
+    visibility: hidden;
+}
+.margin_bottom_100{
+    margin-bottom: 100px;
+}
+.margin_bottom_110{
+    margin-bottom: 110px;
+}
+
 /* Media query for responsiveness */
 
 @media screen and (max-width:1080px) {
